# fast-api-playground

./: .gitignore  README.md  pyproject.toml
src/: database.py  main.py
src/models/: tutorial.py
src/routers/: tutorials.py
src/schemas/: tutorial.py
tests/: test_api.py
